# sqlatypemodel

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
sqlatypemodel/: __init__.py  _type.py  exceptions.py  mixin.py  model.py  model_type.py  protocols.py  serializer.py  sqlalchemy_utils.py
sqlatypemodel/mixin/: __init__.py  events.py  inspection.py  mixin.py  protocols.py  serialization.py  state.py  types.py  wrapping.py
sqlatypemodel/model_type/: __init__.py  model_type.py  protocols.py
sqlatypemodel/util/: attrs.py  constants.py  dataclasses.py  json.py  sqlalchemy.py
tests/: conftest.py  stress_test.py  test_async_integration.py  test_batching.py  test_benchmark_mixins.py  test_custom_types.py  test_edge_cases.py  test_exceptions.py  test_lazy.py  test_mixin.py  test_model_type.py  test_performance.py  test_pickle.py  test_pickle_integration.py  test_preformance.py  test_protocols.py  test_stress.py
