[tool.poetry]
name = "sqlatypemodel"
version = "0.0.1"
description = "Tool for use class-based models as data types in sqlalchemy"
authors = ["grehban <maximfeedback19@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.41"
typing-extensions = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
