[project]
name = "sqlatypemodel"
version = "0.4.0"
description = "Typed JSON fields for SQLAlchemy with automatic mutation tracking"
authors = [
    {name = "grehban", email = "maximfeedback19@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
repository = "https://github.com/GrehBan/sqlatypemodel"
packages = [{ include = "sqlatypemodel" }]

dependencies = [
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"